updated Card.module.css to fix the missing border issue on cards

--- a/packages/shared/src/components/cards/common/Card.module.css
+++ b/packages/shared/src/components/cards/common/Card.module.css
@@ -24,6 +24,9 @@
 
   & .link {
     z-index: unset;
+    &:focus:focus-visible{
+      border-radius: 1rem;
+    }
   }
 }
 
